--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,8 @@ safe: false
 highlighter: pygments
 title: 飞鸟集
 description: 人生到处知何似，应似飞鸿踏雪泥
-theme: kunka
+#theme: kunka
+theme: modernist
 disqusname: haijieyang
 
 # theme can be: hack, leap-day, merlot, midnight, minimal, modernist, slate, time-machine, kunka
