--- a/_config.yml
+++ b/_config.yml
@@ -64,11 +64,11 @@ nav:
 author:
     name: yanghaijie
     email: yanghaijie@intv.com.cn
-    imageLink: https://avatars.githubusercontent.com/minixalpha
+    imageLink: https://raw.githubusercontent.com/haijieyang/haijieyang.github.io/master/images/child.png
     simpleIntro: 我是yanghaijie 
     detailIntro:
-      <p>Jekyll 是一个简洁的、特别针对博客平台的 静态网站 生成器。它使用一个模板目录作为网站布局的基础框架，并在其上运行 Textile 、 Markdown 或 Liquid 标记语言的转换器，最终生成一个完整的静态Web站点，可以被放置在Apache或者你喜欢的其他任何Web服务器上。它同时也是 GitHub Pages 、一个由 GitHub 提供的用于托管项目主页或博客的服务，在后台所运行的引擎。</p>
-      <p>很早之前，使用过 wordpress 来写博客。但是还要处理很多的底层问题。而使用 Jekyll 来写博客，可以很简单，写 Markdown 就好。然而，Jekyll 还很年轻，没有很多主题的支持。这里的主题，就是为 Jekyll 而写的。希望你能喜欢。</p>
+      <p>Jekyll 使用模板生成</p>
+      <p>记录一些工作和学习的一些知识</p>
 
 
 #################################### global configure #######################################
@@ -80,8 +80,8 @@ safe: false
 highlighter: pygments
 title: 流星的记录
 description: 能力有限,努力无限
-#theme: kunka
-theme: modernist
+theme: kunka
+#theme: modernist
 disqusname: haijieyang
 
 # theme can be: hack, leap-day, merlot, midnight, minimal, modernist, slate, time-machine, kunka
